<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/custom_border"
    >

    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_note"
        android:layout_marginVertical="5dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        />

    <EditText
        android:id="@+id/editTextNoteTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:hint="@string/title"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/editTextNoteBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:hint="@string/note_body"
        android:inputType="textMultiLine"
        />

    <Button
        android:id="@+id/btnConfirmNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:text="@string/save"
        />
    <Button
        android:id="@+id/btnDismissNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/purple_700"
        android:text="@string/dismiss"
        />
</LinearLayout>