<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_reminders">

    <fragment
        android:id="@+id/navigation_info"
        android:name="com.example.pet_health_pal.Activities.ui.information.PetInformationFragment"
        android:label="@string/title_info"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/navigation_reminders"
        android:name="com.example.pet_health_pal.Activities.ui.reminders.RemindersFragment"
        android:label="@string/title_reminders"
        tools:layout="@layout/fragment_reminders" />

    <fragment
        android:id="@+id/navigation_health"
        android:name="com.example.pet_health_pal.Activities.ui.health.HealthFragment"
        android:label="@string/title_health"
        tools:layout="@layout/fragment_health" />
</navigation>